// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkDescriptionTerm should render correctly 1`] = `
<DocumentFragment>
  <dt
    class="bpk-description-list__term"
    data-backpack-ds-component="DescriptionTerm"
  >
    Term
  </dt>
</DocumentFragment>
`;

exports[`BpkDescriptionTerm should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <dt
    class="bpk-description-list__term test-term"
    data-backpack-ds-component="DescriptionTerm"
  >
    Term
  </dt>
</DocumentFragment>
`;

exports[`BpkDescriptionTerm should render correctly with a other attributes 1`] = `
<DocumentFragment>
  <dt
    class="bpk-description-list__term"
    data-backpack-ds-component="DescriptionTerm"
    title="this is a term"
  >
    Term
  </dt>
</DocumentFragment>
`;